chore: split save-sidebar

--- a/agents/generate/index.yaml
+++ b/agents/generate/index.yaml
@@ -23,6 +23,7 @@ skills:
       savePath:
         $get: outputDir
       fileName: structure-plan.json
+  - ../utils/save-sidebar.mjs
   - type: transform
     name: transformData
     task_render_mode: hide
