--- a/aigne.yaml
+++ b/aigne.yaml
@@ -18,7 +18,7 @@ agents:
   - ./agents/generate/check-document-structure.yaml
   - ./agents/generate/user-review-document-structure.mjs
   - ./agents/generate/index.yaml
-  
+
   # Documentation Structure Tools
   - ./agents/generate/document-structure-tools/add-document.mjs
   - ./agents/generate/document-structure-tools/delete-document.mjs
@@ -47,6 +47,7 @@ agents:
 
   # Publishing
   - ./agents/publish/publish-docs.mjs
+  - ./agents/publish/translate-meta.mjs
   - ./agents/publish/index.yaml
 
   # Media
@@ -66,6 +67,7 @@ agents:
   # Utilities
   - ./agents/utils/load-sources.mjs
   - ./agents/utils/save-docs.mjs
+  - ./agents/utils/save-sidebar.mjs
   - ./agents/utils/transform-detail-datasources.mjs
   - ./agents/utils/save-single-doc.mjs
   - ./agents/utils/save-output.mjs
