--- a/agents/generate/index.yaml
+++ b/agents/generate/index.yaml
@@ -48,7 +48,7 @@ skills:
   - url: ../utils/check-feedback-refiner.mjs
     default_input:
       stage: document_structure
-  - ../utils/save-docs.mjs
+  - ../utils/post-generate.mjs
 
 input_schema:
   type: object
