--- a/agents/update/update-single-document.yaml
+++ b/agents/update/update-single-document.yaml
@@ -3,5 +3,6 @@ name: updateSingleDocument
 skills:
   - ../utils/transform-detail-datasources.mjs
   - ../update/user-review-document.mjs
+  - ../utils/save-doc.mjs
 iterate_on: selectedDocs
 concurrency: 1
