fix: polish generate/update/translate save doc logic (#218)
* chore: split save-sidebar

* chore: add checkNeedGenerate message output

* fix: split save doc & save translations

* fix: polish update save logic

* fix: polish translate save logic

* fix: translate lack languages in generate

* chore: use p-map for better concurrency

* fix: fix lint error

* fix: fix review

* fix: polish init content-source placeholder

* fix: fix ai review

--- a/agents/generate/index.yaml
+++ b/agents/generate/index.yaml
@@ -23,6 +23,7 @@ skills:
       savePath:
         $get: outputDir
       fileName: structure-plan.json
+  - ../utils/save-sidebar.mjs
   - type: transform
     name: transformData
     task_render_mode: hide
@@ -47,7 +48,7 @@ skills:
   - url: ../utils/check-feedback-refiner.mjs
     default_input:
       stage: document_structure
-  - ../utils/save-docs.mjs
+  - ../utils/post-generate.mjs
 
 input_schema:
   type: object
