--- a/agents/update/generate-document.yaml
+++ b/agents/update/generate-document.yaml
@@ -58,33 +58,4 @@ afs:
           should search and read as needed while generating document content
 keep_text_in_tool_uses: false
 skills:
-  - type: team
-    task_render_mode: collapse
-    name: generateDiagram
-    skills:
-      - ../generate/draw-diagram.yaml
-      - ../generate/wrap-diagram-code.mjs
-    reflection:
-      reviewer: ../generate/check-diagram.mjs
-      is_approved: isValid
-      max_iterations: 5
-      return_last_on_max_iterations: false
-      custom_error_message: "MUST NOT generate any diagram: validation failed after max iterations."
-    input_schema:
-      type: object
-      properties:
-        documentContent:
-          type: string
-          description: The **raw text content** of the current document. (**Note:** This is the original document and **does not include** any diagram source code.)
-        locale:
-          type: string
-          description: Language for diagram labels and text
-          default: en
-      required:
-        - documentContent
-    output_schema:
-      type: object
-      properties:
-        diagramSourceCode:
-          type: string
-          description: The **diagram source code** generated from the input text.
+  - ./generate-diagram.yaml
