--- a/aigne.yaml
+++ b/aigne.yaml
@@ -1,8 +1,7 @@
 #!/usr/bin/env aigne
 
-chat_model:
-  provider: google
-  name: gemini-2.5-pro
+model:
+  model: google/gemini-2.5-pro
   # name: gemini-2.5-flash
   temperature: 0.8
 agents:
