--- a/agents/generate/generate-structure.yaml
+++ b/agents/generate/generate-structure.yaml
@@ -7,6 +7,8 @@ skills:
     iterate_on: datasources
     skills:
       - type: ai
+        model:
+          reasoning_effort: 500
         instructions:
           - role: system
             url: ../../prompts/structure/generate/system-prompt.md
