--- a/agents/schema/document-structure.yaml
+++ b/agents/schema/document-structure.yaml
@@ -10,9 +10,7 @@ items:
       type: string
       description: Path in URL format, cannot be empty, cannot contain spaces or special characters, must start with /, no need to include language level, e.g., /zh/about should return /about
     parentId:
-      type:
-        - string
-        - "null"
+      type: string
       description: Parent node path, if null indicates it is a top-level node
     sourceIds:
       type: array
