--- a/agents/schema/document-structure-item.yaml
+++ b/agents/schema/document-structure-item.yaml
@@ -8,7 +8,7 @@ properties:
   path:
     type: string
     description: Path in URL format, cannot be empty, cannot contain spaces or special characters, must start with /, no need to include language level, e.g., /zh/about should return /about
-  parentId:
+  parentPath:
     type: string
     description: Parent node path, if null indicates it is a top-level node
   sourceIds:
