--- a/aigne.yaml
+++ b/aigne.yaml
@@ -1,8 +1,7 @@
 #!/usr/bin/env aigne
 
-chat_model:
-  provider: google
-  name: gemini-2.5-pro
+model:
+  model: google/gemini-2.5-pro
   # name: gemini-2.5-flash
   temperature: 0.8
 agents:
@@ -11,7 +10,6 @@ agents:
 
   # Documentation Structure Generation
   - ./agents/generate/generate-structure.yaml
-  - ./agents/generate/generate-structure-without-tools.yaml
   - ./agents/generate/update-document-structure.yaml
   - ./agents/generate/check-need-generate-structure.mjs
   - ./agents/generate/refine-document-structure.yaml
