--- a/agents/update/handle-document-update.yaml
+++ b/agents/update/handle-document-update.yaml
@@ -23,6 +23,14 @@ skills:
       max_iterations: 5
       return_last_on_max_iterations: true
     task_title: Generate document for '{{ title }}'
+  - type: transform
+    jsonata: |
+      $merge([
+        $,
+        { "documentContent": content }
+      ])
+  - ./check-generate-diagram.mjs
+  # - ../generate/merge-diagram.yaml
   - ../utils/save-doc.mjs
 input_schema:
   type: object
