chore: polish datasources, detailDataSource, dataSourceChunk named

--- a/agents/evaluate/index.yaml
+++ b/agents/evaluate/index.yaml
@@ -16,9 +16,7 @@ skills:
       $merge([
         $,
         {
-          "documentStructure": originalDocumentStructure,
-          "datasources": "",
-          "datasourcesList": ""
+          "documentStructure": originalDocumentStructure
         }
       ])
   - ./document-structure.yaml
