--- a/agents/update/generate-document.yaml
+++ b/agents/update/generate-document.yaml
@@ -16,7 +16,7 @@ input_schema:
     locale:
       type: string
       description: User language, such as zh, en
-    datasources:
+    detailDataSource:
       type: string
       description: Source data and context for document content generation
     targetAudience:
@@ -44,7 +44,7 @@ input_schema:
       description: Additional supplementary information
   required:
     - rules
-    - datasources
+    - detailDataSource
     - originalDocumentStructure
 # output_key: content
 output_schema:
@@ -58,7 +58,7 @@ output_schema:
       description: Does this document need to generate diagram?
   required:
     - content
-    - datasources
+    - detailDataSource
 afs:
   modules:
     - module: system-fs
